fixing wrong displayed time of the IBOs store date in the box_server (=using UTC instead of local time when transmitting the store time of the box_server, to let the browser decide instead, which local time should be displayed); fixing scrollbar display bug, so that the scrollbar appears in the main container instead of on the whole body; updating interface to display more information on the sidebar; adding animation and transition to overview page after 2 secs, when input data was send successful to the box_server; adding transition to overview after starting a process after 2 secs

--- a/src/webclient/dashboard.css
+++ b/src/webclient/dashboard.css
@@ -84,6 +84,14 @@ body {
   margin-top: 0;
 }
 
+/* make scrollbar on main div instead of on the body*/
+html, body, #main-container, #main-row, #main{
+    height: 100%;
+}
+
+.main{
+    overflow: auto;
+}
 
 /*
  * Placeholder dashboard ideas
